// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Modal
  contentLabel="project_branch_pull_request.branch.rename"
  onRequestClose={[MockFunction]}
  size="small"
>
  <header
    className="modal-head"
  >
    <h2>
      project_branch_pull_request.branch.rename
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="rename-branch-name"
        >
          new_name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="rename-branch-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="master"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        rename
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`renders 2`] = `
<Modal
  contentLabel="project_branch_pull_request.branch.rename"
  onRequestClose={[MockFunction]}
  size="small"
>
  <header
    className="modal-head"
  >
    <h2>
      project_branch_pull_request.branch.rename
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="rename-branch-name"
        >
          new_name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="rename-branch-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="dev"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        rename
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`renders 3`] = `
<Modal
  contentLabel="project_branch_pull_request.branch.rename"
  onRequestClose={[MockFunction]}
  size="small"
>
  <header
    className="modal-head"
  >
    <h2>
      project_branch_pull_request.branch.rename
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="rename-branch-name"
        >
          new_name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="rename-branch-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="dev"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        rename
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
